bootrom and bootloader

--- a/ROM/Makefile
+++ b/ROM/Makefile
@@ -1,4 +1,4 @@
-all: 6803 ../mcu_rom.v 
+all: 6803 ../mcu_rom.v bootloader
 
 6803: 6803.PAS
 	fpc $^
@@ -14,5 +14,8 @@ rom.mem: ROM.ASM
 	cd .. && \
 	/opt/diamond/3.9_x64/ispfpga/bin/lin64/scuba -w -n mcu_rom -lang verilog -synth lse -bus_exp 7 -bb -arch xo2c00 -type rom -addr_width 8 -num_rows 256 -data_width 8 -outdata REGISTERED -cascade -1 -resetmode SYNC -sync_reset  -memfile ROM/rom.mem -memformat orca
 
+bootloader: bootloader.c
+	$(CC) $^ -o $@ -Wall -O2 -g
+
 clean:
-	rm -f rom.bin *.LST *.CMD 6803 *.o *.mem
+	rm -f rom.bin *.LST *.CMD 6803 *.o *.mem bootloader
