--- a/ROM/APPS/Makefile
+++ b/ROM/APPS/Makefile
@@ -1,8 +1,8 @@
-all: DEMO1.CMD IRQTEST.CMD
+all: DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD MICROBASIC.CMD
 
 .SUFFIXES: .ASM .CMD
 
-.ASM.CMD:
+.ASM.CMD: ../DEVMAP.INC ../BOOTROM.INC
 	../6803 $< $(basename $@) $@
 
 clean:
