MicroBasicPlus sources fixed for 6803 asm

--- a/ROM/APPS/Makefile
+++ b/ROM/APPS/Makefile
@@ -1,4 +1,4 @@
-all: DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD MICROBASIC.CMD
+all: DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD MICROBASIC.CMD MICROBASICPLUS.CMD
 
 .SUFFIXES: .ASM .CMD
 
