--- a/ROM/APPS/Makefile
+++ b/ROM/APPS/Makefile
@@ -1,4 +1,4 @@
-all: DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD MICROBASIC.CMD MICROBASICPLUS.CMD RAMCHK.CMD
+all: DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD MICROBASIC.CMD MICROBASICPLUS.CMD RAMCHK.CMD DEMO4.CMD DEMO5.CMD DEMO6.CMD
 
 .SUFFIXES: .ASM .CMD
 
