--- a/ROM/APPS/Makefile
+++ b/ROM/APPS/Makefile
@@ -1,4 +1,8 @@
-all: DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD MICROBASIC.CMD MICROBASICPLUS.CMD RAMCHK.CMD DEMO4.CMD RAMPAGECHK.CMD DEMO6.CMD SDTEST.CMD SPITEST.CMD VPUTEST.CMD VPUTEST16.CMD
+all: DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD \
+    MICROBASIC.CMD MICROBASICPLUS.CMD RAMCHK.CMD \
+    DEMO4.CMD RAMPAGECHK.CMD DEMO6.CMD \
+    SDTEST.CMD SPITEST.CMD VPUTEST.CMD VPUTEST16.CMD \
+    VPUDMATEST.CMD
 
 .SUFFIXES: .ASM .CMD
 
