video driver for linear framebuffer

--- a/ROM/APPS/Makefile
+++ b/ROM/APPS/Makefile
@@ -2,7 +2,7 @@ all: DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD \
     MICROBASIC.CMD MICROBASICPLUS.CMD RAMCHK.CMD \
     DEMO4.CMD RAMPAGECHK.CMD DEMO6.CMD \
     SDTEST.CMD SPITEST.CMD VPUTEST.CMD VPUTEST16.CMD \
-    VPUDMATEST.CMD
+    VPUDMATEST.CMD VIDEODRV.CMD
 
 .SUFFIXES: .ASM .CMD
 
