spi select external register

--- a/ROM/APPS/Makefile
+++ b/ROM/APPS/Makefile
@@ -3,7 +3,7 @@ all: DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD \
     DEMO4.CMD RAMPAGECHK.CMD DEMO6.CMD \
     SDTEST.CMD SPITEST.CMD VPUTEST.CMD VPUTEST16.CMD \
     VPUDMATEST.CMD VIDEODRV.CMD \
-    PSGDEMO.CMD
+    PSGDEMO.CMD RAMTEST.CMD
 
 .SUFFIXES: .ASM .CMD
 
