--- a/ROM/C6801/Makefile
+++ b/ROM/C6801/Makefile
@@ -1,4 +1,4 @@
-all: hello2.cmd hello3.cmd hello4.cmd hello5.cmd hello6.cmd hello7.cmd hello8.cmd hello9.c hello10.c
+all: hello2.cmd hello3.cmd hello4.cmd hello5.cmd hello6.cmd hello7.cmd hello8.cmd hello9.cmd hello10.cmd
 
 CC = ./c6801
 
