updated assembler, linker and library added

--- a/ROM/APPS/Makefile
+++ b/ROM/APPS/Makefile
@@ -3,12 +3,13 @@ all: DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD \
     DEMO4.CMD RAMPAGECHK.CMD DEMO6.CMD \
     SDTEST.CMD SPITEST.CMD VPUTEST.CMD VPUTEST16.CMD \
     VPUDMATEST.CMD VIDEODRV.CMD \
-    PSGDEMO.CMD RAMTEST.CMD CHIPTUNE.CMD ymstreamer
+    PSGDEMO.CMD RAMTEST.CMD CHIPTUNE.CMD ymstreamer \
+    DEMO8.CMD
 
 .SUFFIXES: .ASM .CMD
 
 .ASM.CMD: ../DEVMAP.INC ../BOOTROM.INC
-	../6803 $< $(basename $@) $@
+	../uniasm $< $(basename $@) $@
 
 clean:
 	rm -f *.LST *.CMD ymstreamer
