bootrom library added

--- a/ROM/DEVEL/Makefile
+++ b/ROM/DEVEL/Makefile
@@ -1,17 +1,22 @@
-all: uniasm unilib unilink unic CLIB.OBJ
+all: uniasm unilib unilink unic CLIB.OBJ LIBROM.OBJ
 
-.SUFFIXES: .pas .ASM .OBJ
+.SUFFIXES: .pas .ASM .OBJ .EXP .INC
 
 .pas:
 	fpc -g -gl $<
 
-CLIB.EXP: CLIB.INC
+#CLIB.EXP: CLIB.INC
+#	./exportsym.sh $< > $@
+
+.INC.EXP:
 	./exportsym.sh $< > $@
 
 CLIB.OBJ: CLIB.EXP
+
+LIBROM.OBJ: LIBROM.EXP
 
 .ASM.OBJ:
 	./uniasm $< $(basename $@) $@
 
 clean:
-	rm -f *.o uniasm unilib unilink unic CLIB.EXP CLIB.OBJ CLIB.LST
+	rm -f *.o uniasm unilib unilink unic *.EXP *.OBJ *.LST
