export C headers for devices and bootrom

--- a/ROM/DEVEL/Makefile
+++ b/ROM/DEVEL/Makefile
@@ -1,4 +1,4 @@
-all: uniasm unilib unilink unic CLIB.OBJ LIBROM.OBJ CRT0.OBJ
+all: uniasm unilib unilink unic CLIB.OBJ LIBROM.OBJ CRT0.OBJ DEVMAP.H BOOTROM.H
 
 .SUFFIXES: .pas .ASM .OBJ .EXP .INC
 
@@ -11,6 +11,9 @@ all: uniasm unilib unilink unic CLIB.OBJ LIBROM.OBJ CRT0.OBJ
 .INC.EXP:
 	./exportsym.sh $< > $@
 
+.INC.H:
+	./exporthdr.sh ../$< > $@
+
 CLIB.OBJ: CLIB.EXP
 
 LIBROM.OBJ: LIBROM.EXP
@@ -18,5 +21,11 @@ LIBROM.OBJ: LIBROM.EXP
 .ASM.OBJ:
 	./uniasm $< $(basename $@) $@
 
+BOOTROM.H: ../BOOTROM.INC
+	./exporthdr.sh $< > $@
+
+DEVMAP.H: ../DEVMAP.INC
+	./exporthdr.sh $< > $@
+
 clean:
-	rm -f *.o uniasm unilib unilink unic *.EXP *.OBJ *.LST
+	rm -f *.o uniasm unilib unilink unic *.EXP *.OBJ *.LST DEVMAP.H BOOTROM.H
