--- a/ROM/C6801/Makefile
+++ b/ROM/C6801/Makefile
@@ -1,13 +1,23 @@
-all: hello2.cmd hello3.cmd hello4.cmd hello5.cmd hello6.cmd hello7.cmd hello8.cmd hello9.cmd hello10.cmd optest.cmd gpio.cmd
+UNIASM		= ../DEVEL/uniasm
+UNILIB		= ../DEVEL/unilib
+UNILINK		= ../DEVEL/unilink
 
-CC = ./c6801
+UNIC = ../DEVEL/unic
+
+CC = $(UNIC)
+
+all: $(UNIC) hello1.cmd
+#hello2.cmd hello3.cmd hello4.cmd hello5.cmd hello6.cmd hello7.cmd hello8.cmd hello9.cmd hello10.cmd optest.cmd gpio.cmd
+
+$(UNIC):
+	make -C $(shell dirname $(UNIASM))
 
 CFLAGS = -fc -fo -fb
 
 .SUFFIXES: .asm .cmd
 
 .asm.cmd: ../DEVMAP.INC ../BOOTROM.INC CLIB.INC
-	../uniasm $< $(basename $@) $@
+	$(UNIASM) $< $(basename $@) $@
 
 .c.asm:
 	$(CC) $(CFLAGS) $< -o $@
