--- a/ROM/ASM/Makefile
+++ b/ROM/ASM/Makefile
@@ -4,8 +4,8 @@ all: $(UNIASM) \
     DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD \
     MICROBASIC.CMD MICROBASICPLUS.CMD RAMCHK.CMD \
     DEMO4.CMD RAMPAGECHK.CMD DEMO6.CMD \
-    SDTEST.CMD SPITEST.CMD VPUTEST.CMD VPUTEST16.CMD \
-    VPUDMATEST.CMD VIDEODRV.CMD \
+    SDTEST.CMD SPITEST.CMD \
+    VPUDMATEST.CMD VIDEODRV.CMD VIDEOMODES.CMD \
     PSGDEMO.CMD RAMTEST.CMD CHIPTUNE.CMD ymstreamer \
     DEMO8.CMD
 
