--- a/ROM/ASM/Makefile
+++ b/ROM/ASM/Makefile
@@ -1,13 +1,17 @@
 UNIASM = ../DEVEL/uniasm
 
-all: $(UNIASM) \
-    DEMO1.CMD IRQTEST.CMD DEMO2.CMD DEMO3.CMD \
-    MICROBASIC.CMD MICROBASICPLUS.CMD RAMCHK.CMD \
-    DEMO4.CMD RAMPAGECHK.CMD DEMO6.CMD \
-    SDTEST.CMD SPITEST.CMD \
-    VPUDMATEST.CMD VIDEODRV.CMD VIDEOMODES.CMD \
-    PSGDEMO.CMD RAMTEST.CMD CHIPTUNE.CMD ymstreamer \
-    DEMO8.CMD
+all: $(UNIASM)		\
+    IRQTEST.CMD		\
+    RAMCHK.CMD		\
+    RAMTEST.CMD		\
+    RAMPAGECHK.CMD	\
+    VIDEOMODES.CMD	\
+    VPUDMATEST.CMD	\
+    VIDEODRV.CMD	\
+    MICROBASIC.CMD	\
+    MICROBASICPLUS.CMD	\
+    RAMTESTINT.CMD		\
+    ymstreamer
 
 $(UNIASM):
 	make -C $(shell dirname $(UNIASM)) $(shell basename $(UNIASM))
