NMI/IRQ external lines control

--- a/ROM/ASM/Makefile
+++ b/ROM/ASM/Makefile
@@ -10,7 +10,7 @@ all: $(UNIASM)		\
     VIDEODRV.CMD	\
     MICROBASIC.CMD	\
     MICROBASICPLUS.CMD	\
-    RAMTESTINT.CMD		\
+    NMITEST.CMD		\
     ymstreamer
 
 $(UNIASM):
