int 12, 13, 14, 15, initial 22, 23 added.

--- a/ROM/ASM/Makefile
+++ b/ROM/ASM/Makefile
@@ -1,13 +1,16 @@
 UNIASM = ../DEVEL/uniasm
 
 all: $(UNIASM)		\
+    DEMO1.CMD		\
     IRQTEST.CMD		\
     VIRQTEST.CMD	\
     RAMCHK.CMD		\
     RAMTEST.CMD		\
     RAMPAGECHK.CMD	\
-    VIDEOMODES.CMD	\
     VPUDMATEST.CMD	\
+    VPUMODES.CMD	\
+    VIDEOMODES.CMD	\
+    TEXTMODE.CMD	\
     VIDEODRV.CMD	\
     MICROBASIC.CMD	\
     MICROBASICPLUS.CMD	\
