--- a/ROM/BUFFALO/Makefile
+++ b/ROM/BUFFALO/Makefile
@@ -1,9 +1,12 @@
 AS11 = ../DEVEL/AS11/as11
 
-all: $(AS11) buf34-zpx.cmd
+all: $(AS11) buf34-zpx.cmd KERNEL.SYS
 
 $(AS11):
 	make -C $(shell dirname $(AS11)) $(shell basename $(AS11))
+
+KERNEL.SYS: buf34-zpx.cmd
+	cp -f $< $@
 
 .SUFFIXES: .asm .s19 .cmd
 
@@ -14,4 +17,4 @@ $(AS11):
 	objcopy -I srec -O binary $< $@
 
 clean:
-	rm -f *.cmd *.s19 *.lst
+	rm -f *.cmd *.s19 *.lst KERNEL.SYS
